test/good/4_portee.prog
var a;

proc p
    var a;
    a := 1
end

reach a //not reachable
