test/bad/1_portee.prog
var a;

proc p
    var b;
    a := 1;
    b := 2
end

reach a //reachable
reach !a //reachable
reach b